--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.4.1",
-    "emoji-regex": "^9.2.0"
+    "emoji-regex": "^9.2.0",
+    "eslint": "^7.13.0"
   },
   "engines": {
     "node": "14.15.0",
