--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "discord.js": "^12.4.1",
     "emoji-regex": "^9.2.0",
-    "eslint": "^7.13.0"
   },
   "engines": {
     "node": "14.15.0",
     "npm": "6.14.8"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0"
   }
 }
