--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "update-commands" : "node deploy-commands.js",
+    "delete-commands" : "node delete-command.js",
     "start": "node index.js"
   },
   "author": "Treveur",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.4.1",
-    "emoji-regex": "^9.2.0",
+    "discord.js": "^14.6.0",
+    "emoji-regex": "^9.2.0"
   },
   "engines": {
-    "node": "14.15.0",
-    "npm": "6.14.8"
+    "node": "16.13.0",
+    "npm": "8.19.2"
   },
   "devDependencies": {
     "eslint": "^8.26.0"
