--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "pollifyr",
-  "version": "1.0.0",
-  "description": "Create",
+  "version": "1.1.0",
+  "description": "A simple tool to create poll with emojis",
   "main": "index.js",
   "scripts": {
-    "update-commands": "node deploy-commands.js",
     "delete-commands": "node delete-command.js",
-    "update-commands:local": "node -r dotenv/config deploy-commands.js",
     "delete-commands:local": "node -r dotenv/config delete-command.js",
     "start": "node index.js",
-    "start:local": "node -r dotenv/config index.js"
+    "start:local": "node -r dotenv/config index.js",
+    "update-commands": "node deploy-commands.js",
+    "update-commands:local": "node -r dotenv/config deploy-commands.js"
   },
   "author": "Treveur",
   "license": "ISC",
