--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.6.0",
-    "emoji-regex": "^10.2.1"
+    "emoji-regex": "^10.2.1",
+    "i18next": "^22.0.6",
   },
   "engines": {
     "node": ">=16.13.0",
