--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.6.0",
     "emoji-regex": "^10.2.1",
     "i18next": "^22.0.6",
+    "i18next-fs-backend": "^2.0.1"
   },
   "engines": {
     "node": ">=16.13.0",
